Hide howto behind play button, fix some css quirks

--- a/assets/css/1.3_spel.css
+++ b/assets/css/1.3_spel.css
@@ -214,7 +214,7 @@ canvas#game-interactive {
 	z-index: 5;
 	top: 100px;
 	left: 104px;
-	width: 40px;
+	width: 66px;
 	padding: 10px 14px;
 	border-radius: 1000px;
 	opacity: 0;
@@ -459,15 +459,15 @@ canvas#game-interactive {
 	left: 50%;
 	right: auto;
 	bottom: auto;
-	height: 200px;
-	width: 200px;
-	border-radius: 100px;
-	background: #333;
-	margin-left: -100px;
+	height: 150px;
+	width: 150px;
+	border-radius: 100%;
+	background: rgba(0,0,0,0.75);
+	margin-left: -75px;
 }
 .game-pause .triangle {
 	display: block;
-	margin: 60px auto 0;
+	margin: 48px auto 0;
 	-webkit-transition: .3s;
 	transition: .3s;
 	border-style: solid;
@@ -475,8 +475,11 @@ canvas#game-interactive {
 	height: 0px;
 	line-height: 0px;
 	border-color: transparent transparent transparent #F8F8F8;
-	border-width: 40px 0px 40px 70px;
-	margin-left: 74px;
+	border-width: 30px 0px 30px 56px;
+	margin-left: 56px;
+}
+.game-pause.game-start {
+	display: block;
 }
 
 
@@ -613,7 +616,7 @@ canvas#game-interactive {
 .game button {
 	font-family: 'Lato';
 	font-weight: bold;
-	background: #699C9E;
+	background: rgba(255,255,255,.5);
 	border: none;
 	width: 70px;
 	padding: 6px 0;
@@ -627,18 +630,21 @@ canvas#game-interactive {
 	padding: 6px 10px;
 }
 .game button:focus, button:hover {
-	background: #2ECC71;
 	outline: none;
+	color: #F7B39C;
+	background: rgba(255,255,255,.85);
 }
 .game .pause-btn {
 	position: absolute;
 	top: -2px;
 	right: 0px;
 	z-index: 20;
+	font-size: 12px;
 }
 .game .sound-btn {
 	position: absolute;
 	top: 28px;
 	right: 0px;
 	z-index: 20;
+	font-size: 12px;
 }
